$Id$

2018-09-27  Christian Franke  <franke@computer.org>

	configure.ac: Change default for '--with-nvme-devicescan' to 'yes'
	on Linux and Windows.  Keep 'no' on FreeBSD, NetBSD and Darwin.

2018-09-26  Christian Franke  <franke@computer.org>

	configure.ac: Print warning if systemd(1) is present but
	libsystemd-dev package is missing.

	smartd.cpp: Notify READY=1 to systemd just before first sleep() to
	ensure that the signal handlers are set.

	smartd.cpp: Always ignore failure of ATA SMART ENABLE command if
	'-T permissive' is specified.  Useful for testing on virtual
	machines.

2018-09-21  Christian Franke  <franke@computer.org>

	configure.ac, os_linux.cpp: Remove redundant define WITH_SELINUX.

	configure.ac: Check for 'libcap-ng' only on Linux.
	Rework __USE_MINGW_ANSI_STDIO test for MinGW runtime.
	Print 'deprecated' warning for '--without-working-snprintf'.

	Add systemd(1) notify support to smartd (#1081):
	configure.ac: Add option '--with-libsystemd'.
	Makefile.am: Add linker flag and man page conditional.
	smartd.cpp: If environment variable NOTIFY_SOCKET is set, use
	sd_notify(3) to inform the service manager about state changes.
	smartd.service.in: Set 'Type=notify'.
	smartd.8.in: Document new functionality.

2018-09-16  Christian Franke  <franke@computer.org>

	atacmds.cpp: Avoid possible virtual call in dtor
	(cppcheck 1.84: virtualCallInConstructor).

	os_win32.cpp: Use unsigned int for bit shifts
	(cppcheck 1.84: shiftTooManyBitsSigned).

	Makefile.am: Set HAVE_WORKING_SNPRINTF also in VC14 config.h.

	os_netbsd.cpp: Add spaces between string literals and macros for
	C++11 (g++ -Wliteral-suffix).

	ataprint.cpp: Add JSON support for '-l selective'.

	drivedb.h: Update or remove links in warning messages.

	drivedb.h: Crucial/Micron BX300, MX1/2/3/500, M5/600, 1100 SSDs:
	- Rename,
	- Crucial BX300 (GH pull/16, #963),
	- Crucial MX300 750GB,
	- Crucial MX500 (#977, #994, #995, #1004, #1024),
	- Micron M500IT (#958),