@@ -2,6 +2,9 @@ $Id$
 
 2018-09-27  Christian Franke  <franke@computer.org>
 
+	configure.ac, utility.cpp, utility.h: Remove replacement for missing
+	'strtoull()'.
+
 	configure.ac: Change default for '--with-nvme-devicescan' to 'yes'
 	on Linux and Windows.  Keep 'no' on FreeBSD, NetBSD and Darwin.
 
